--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,39 @@
 .pixi
 *.egg-info
 
-# for MacOS
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+.installed.cfg
+*.egg
+MANIFEST
+
+# For MacOS
 *.DS_Store
+
+# Data
+data/*
+
+# GGUF
+gguf/*
