--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "project-template"
+name = "synthetic-query-gen"
 version = "0.1.0"
 description = "Add a short description here"
 authors = [{name = "jgkym", email = "jingi.data@gmail.com"}]
@@ -15,10 +15,13 @@ channels = ["conda-forge"]
 platforms = ["osx-arm64"]
 
 [tool.pixi.pypi-dependencies]
-project-template = { path = ".", editable = true }
+synthetic-query-gen = { path = ".", editable = true }
 
 [tool.pixi.tasks]
 
 [tool.pixi.dependencies]
 ruff = ">=0.5.6,<0.6"
 pre-commit = ">=3.8.0,<4"
+dspy-ai = ">=2.4.13,<3"
+omegaconf = ">=2.3.0,<3"
+pip = ">=24.2,<25"
